Fixed vertical-align of images

--- a/themes/default/css/chocolate.less
+++ b/themes/default/css/chocolate.less
@@ -52,7 +52,6 @@
 
     .choco-slider {
       transition: none;
-
     }
   }
 
@@ -82,7 +81,6 @@
 
 .choco-slide {
   display: inline-block;
-  overflow: hidden;
   box-sizing: border-box;
   padding: 20px 0;
   width: 100%;
@@ -117,6 +115,7 @@
   padding: 0;
   width: 0px;
   height: 100%;
+  vertical-align: middle;
 }
 
 .choco-slide-container {
